tests/fixtures/invalid/int_gt_set.py
# Cannot compare with > Int and Set[int]
x: bool = 1 > {1, 2, 3}
